# markdown-code-runner

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml  shell.nix
.github/: settings.yml
.github/workflows/: build.yaml  build.yml  checks.yml
nix/imports/: devshell.nix  pkgs.nix
nix/modules/: fmt.nix
nix/pkgs/markdown-code-runner/: package.nix
src/: cli.rs  codeblock.rs  command.rs  config.rs  main.rs  runner.rs
src/markdown_code_runner/: main.py
src/markdown_code_runner/model/: app_settings.py  language_config.py
src/markdown_code_runner/tests/: test_main.py
tests/: scenarios.rs  tests.rs
tests/fixtures/scenarios/scenario-preserve-indentation/: config.toml  test.expected.md  test.input.md
tests/fixtures/scenarios/scenario-trivial/: test.expected.md  test.input.md
tests/fixtures/scenarios/scenario-use-mdcr-skip/: test.expected.md
