[package]
name = "markdown-code-runner"
version = "0.1.0"
edition = "2021"
description = "Validate, execute and optionally rewrite code blocks in Markdown files based on arbitrary commands"
readme = "README.md"
license = "EUPL-1.2"
repository = "https://github.com/drupol/markdown-code-runner"
keywords = [
  "code",
  "command-line-utilities",
  "markdown",
  "parser",
  "text-processing",
]

[dependencies]
clap = { version = "4.0", features = ["cargo", "derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tempfile = "3"
pulldown-cmark = "0.13.0"
walkdir = "2.5.0"
log = "0.4.27"
env_logger = "0.11.8"
rayon = "1.10.0"
toml = "0.8.20"

[[bin]]
name = "mdcr"
path = "src/main.rs"
