[package]
name = "markdown-code-runner"
version = "0.3.1"
edition = "2021"
description = "Validate, execute and optionally rewrite code blocks in Markdown files based on arbitrary commands"
readme = "README.md"
license = "EUPL-1.2"
repository = "https://github.com/drupol/markdown-code-runner"
keywords = [
  "code",
  "command-line-utilities",
  "markdown",
  "parser",
  "text-processing",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "derive"] }
env_logger = "0.11.8"
log = "0.4.27"
pulldown-cmark = { version = "0.13.0", default-features = false }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
toml = { version = "0.9", features = ["parse"] }
walkdir = "2.5.0"

[[bin]]
name = "mdcr"
path = "src/main.rs"

[profile.release]
strip = true
